[gd_scene load_steps=38 format=2]

[ext_resource path="res://fonte/Ningst Only Peace Font by 7Ntypes.otf" type="DynamicFontData" id=1]
[ext_resource path="res://console/botão_play.png" type="Texture" id=2]
[ext_resource path="res://itensdodesafio/cocos - cópia.png" type="Texture" id=3]
[ext_resource path="res://personagem 2/Pixilart Sprite Sheet (1).png" type="Texture" id=4]
[ext_resource path="res://Imagens/f3a222a4e1676e5.png" type="Texture" id=5]
[ext_resource path="res://itensdodesafio/cocos - cópia 3.png" type="Texture" id=6]
[ext_resource path="res://chão/grama.png" type="Texture" id=7]
[ext_resource path="res://chão/chão1.png" type="Texture" id=8]
[ext_resource path="res://Imagens/salgema1.png" type="Texture" id=9]
[ext_resource path="res://Scripts/desafio1.gd" type="Script" id=10]
[ext_resource path="res://Scripts/personagemdesafio.gd" type="Script" id=11]
[ext_resource path="res://Cenas/saida.gd" type="Script" id=12]
[ext_resource path="res://chão/chão3.png" type="Texture" id=13]
[ext_resource path="res://console/espaço_seta.png" type="Texture" id=14]
[ext_resource path="res://console/botão_pausar.png" type="Texture" id=15]
[ext_resource path="res://console/base_console.png" type="Texture" id=16]
[ext_resource path="res://console/seta_grande1-removebg-preview (1).png" type="Texture" id=17]
[ext_resource path="res://itens/coqueiro.png" type="Texture" id=18]
[ext_resource path="res://console/seta_pequena.png" type="Texture" id=19]
[ext_resource path="res://pausar.tscn" type="PackedScene" id=20]

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 32, 0, 64, 0, 32, 64, 32 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 1440, 800, 0, 800, 0, 0, 1440, 0 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 1440, 800, 0, 800, 0, 0, 1440, 0 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 96, 96, 0, 96, 0, 0, 96, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 64, 0, 64 )

[sub_resource type="TileSet" id=2]
0/name = "f3a222a4e1676e5.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 64, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "cocos - cópia 3.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 96, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "cocos - cópia.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 0, 32, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 5 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
7/name = "chão1.png 7"
7/texture = ExtResource( 8 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 60, 112, 20, 20 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "chão3.png 8"
8/texture = ExtResource( 13 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 61, 115, 17, 15 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "chão3.png 9"
9/texture = ExtResource( 13 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 61, 115, 17, 15 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "grama.png 10"
10/texture = ExtResource( 7 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 1016, 196, 1, 1 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "grama.png 11"
11/texture = ExtResource( 7 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 0, 1440, 800 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape = SubResource( 13 )
11/shape_one_way = false
11/shape_one_way_margin = 1.0
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0
12/name = "grama.png 12"
12/texture = ExtResource( 7 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 0, 96, 96 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape = SubResource( 16 )
12/shape_one_way = false
12/shape_one_way_margin = 1.0
12/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
12/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 37.875, 12 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 10 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 19.5, 10 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 27, 21 )

[sub_resource type="RectangleShape2D" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.5, 15.75 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 144.5, 31 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 10 )

[node name="fundo" type="Sprite" parent="."]
position = Vector2( 265, 152 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="fundo4" type="Sprite" parent="."]
position = Vector2( 783, 438 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="fundo3" type="Sprite" parent="."]
position = Vector2( 271, 441 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="fundo2" type="Sprite" parent="."]
position = Vector2( 756, 158 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -159.0
margin_top = -44.0
margin_right = 1208.0
margin_bottom = 637.0
color = Color( 0.0196078, 0.537255, 0.0196078, 0.392157 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
mode = 2
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 10, 0, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 131071, 8, 0, 65536, 8, 0, 65537, 8, 0, 65538, 8, 0, 65539, 8, 0, 65540, 10, 0, 65543, 9, 0, 65544, 9, 0, 65545, 9, 0, 65546, 9, 0, 65547, 9, 0, 131075, 9, 0, 131076, 10, 0, 131079, 9, 0, 131083, 9, 0, 196611, 9, 0, 196612, 10, 0, 196615, 9, 0, 196619, 9, 0, 196620, 9, 0, 196621, 9, 0, 196622, 9, 0, 196623, 9, 0, 196624, 9, 0, 262147, 9, 0, 262148, 10, 0, 262151, 9, 0, 262155, 9, 0, 327683, 9, 0, 327684, 9, 0, 327685, 9, 0, 327686, 9, 0, 327687, 9, 0, 327691, 9, 0, 393227, 9, 0, 655392, 8, 0 )

[node name="BaseConsole" type="Sprite" parent="."]
position = Vector2( 515, 379 )
scale = Vector2( 5.24, 2.375 )
texture = ExtResource( 16 )

[node name="ColorRect" type="ColorRect" parent="BaseConsole"]
margin_left = -100.382
margin_top = 47.1579
margin_right = -17.3817
margin_bottom = 95.1579
color = Color( 0.67451, 0.294118, 0.0862745, 0.788235 )

[node name="coletavel1" type="Area2D" parent="."]
position = Vector2( 352, 352 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="coletavel1"]
position = Vector2( 0.649994, 8.73125 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel1"]
position = Vector2( -23.125, -2 )
shape = SubResource( 4 )

[node name="coletavel2" type="Area2D" parent="."]
position = Vector2( 419, 361 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="coletavel2"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel2"]
position = Vector2( 0, -10 )
shape = SubResource( 6 )

[node name="coletavel3" type="Area2D" parent="."]
position = Vector2( 474, 361 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="coletavel3"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel3"]
position = Vector2( -6, -10 )
shape = SubResource( 6 )

[node name="pontos" type="Label" parent="."]
margin_left = 927.0
margin_top = 527.0
margin_right = 981.0
margin_bottom = 556.0
custom_fonts/font = SubResource( 7 )
text = ":"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 886.0
margin_top = 529.0
margin_right = 995.0
margin_bottom = 569.0
color = Color( 0, 0, 0, 0 )

[node name="pontosnume" type="Label" parent="ColorRect"]
margin_left = 52.0
margin_top = -2.0
margin_right = 92.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 8 )

[node name="coletavel4" type="Area2D" parent="."]
position = Vector2( 733, 290 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="coletavel4"]
position = Vector2( 1, 6 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel4"]
position = Vector2( -9.5, -2 )
shape = SubResource( 9 )

[node name="coletavel5" type="Area2D" parent="."]
position = Vector2( 731, 349 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="coletavel5"]
position = Vector2( 1, 6 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel5"]
position = Vector2( 0, -2 )
shape = SubResource( 9 )

[node name="coletavel6" type="Area2D" parent="."]
position = Vector2( 732, 420 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="coletavel6"]
position = Vector2( 1, 6 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coletavel6"]
position = Vector2( 0, -2 )
shape = SubResource( 9 )

[node name="pontosarea" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="pontosarea"]
position = Vector2( 898, 553 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )

[node name="saida" type="Area2D" parent="." groups=["saida"]]
position = Vector2( 20, 122 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="saida" groups=["saida"]]
margin_left = 923.0
margin_top = 86.0
margin_right = 1021.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 10 )
text = "SAÍDA..."

[node name="CollisionShape2D" type="CollisionShape2D" parent="saida" groups=["saida"]]
position = Vector2( 980, 95 )
shape = SubResource( 11 )

[node name="StaticBody2D" type="StaticBody2D" parent="saida/CollisionShape2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="saida/CollisionShape2D/StaticBody2D"]
shape = SubResource( 12 )

[node name="garotodesafio1" type="KinematicBody2D" parent="." groups=["Playerdesafio"]]
position = Vector2( 17, 108 )
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="garotodesafio1"]
position = Vector2( 1, 1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
hframes = 26
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="garotodesafio1"]
position = Vector2( 13, -6.75 )
shape = SubResource( 1 )

[node name="iniciar" type="TouchScreenButton" parent="."]
position = Vector2( 325, 401 )
scale = Vector2( 2.5, 2.5 )
normal = ExtResource( 2 )

[node name="BotãoPausar" type="Sprite" parent="."]
position = Vector2( 484, 654 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 15 )

[node name="EspaçoSeta" type="Sprite" parent="."]
position = Vector2( 694, 611 )
scale = Vector2( 4, 4 )
texture = ExtResource( 14 )

[node name="espacoseta1" type="Sprite" parent="."]
position = Vector2( 695, 662 )
scale = Vector2( 4, 4 )
texture = ExtResource( 14 )

[node name="espaco2" type="Sprite" parent="."]
position = Vector2( 783, 610 )
scale = Vector2( 4, 4 )
texture = ExtResource( 14 )

[node name="espaco3" type="Sprite" parent="."]
position = Vector2( 783, 662 )
scale = Vector2( 4, 4 )
texture = ExtResource( 14 )

[node name="esquerda" type="TouchScreenButton" parent="."]
position = Vector2( 321, 513 )
scale = Vector2( 3, 3 )
normal = ExtResource( 17 )

[node name="direita" type="TouchScreenButton" parent="."]
position = Vector2( 291, 575 )
rotation = 3.14159
scale = Vector2( 3, 3 )
normal = ExtResource( 17 )

[node name="baixo" type="TouchScreenButton" parent="."]
position = Vector2( 105, 582 )
rotation = -1.5708
scale = Vector2( 3, 3 )
normal = ExtResource( 17 )

[node name="cima" type="TouchScreenButton" parent="."]
position = Vector2( 73, 501 )
rotation = 1.5708
scale = Vector2( 3, 3 )
normal = ExtResource( 17 )

[node name="Coqueiro" type="Sprite" parent="."]
position = Vector2( 92, 281 )
scale = Vector2( 3, 3 )
texture = ExtResource( 18 )

[node name="Coqueiro2" type="Sprite" parent="."]
position = Vector2( 374, 151 )
scale = Vector2( 3, 3 )
texture = ExtResource( 18 )

[node name="Coqueiro3" type="Sprite" parent="."]
position = Vector2( 619, 329 )
scale = Vector2( 3, 3 )
texture = ExtResource( 18 )

[node name="Coqueiro4" type="Sprite" parent="."]
position = Vector2( 910, 123 )
scale = Vector2( 3, 3 )
texture = ExtResource( 18 )

[node name="Cocos-Cópia" type="Sprite" parent="."]
position = Vector2( 155, 431 )
texture = ExtResource( 3 )

[node name="Cocos-Cópia" type="Sprite" parent="Cocos-Cópia"]
position = Vector2( 209, -185 )
texture = ExtResource( 3 )

[node name="Cocos-Cópia2" type="Sprite" parent="Cocos-Cópia"]
position = Vector2( 504, -4 )
texture = ExtResource( 3 )

[node name="Cocos-Cópia" type="Sprite" parent="Cocos-Cópia/Cocos-Cópia2"]
position = Vector2( 226, -206 )
texture = ExtResource( 3 )

[node name="Cocos-Cópia2" type="Sprite" parent="."]
position = Vector2( 177, 432 )
texture = ExtResource( 3 )

[node name="Cocos-Cópia3" type="Sprite" parent="."]
position = Vector2( 950, 217 )
texture = ExtResource( 3 )

[node name="paredeinvisivel" type="Area2D" parent="." groups=["paredeinvi"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="paredeinvisivel"]
position = Vector2( 120, 27 )
shape = SubResource( 17 )

[node name="Esquerda1" type="Sprite" parent="."]
position = Vector2( 709, 609 )
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )

[node name="Esquerda2" type="Sprite" parent="."]
position = Vector2( 795, 608 )
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )

[node name="Esquerda3" type="Sprite" parent="."]
position = Vector2( 710, 660 )
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )

[node name="Esquerda4" type="Sprite" parent="."]
position = Vector2( 797, 659 )
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )

[node name="Direita1" type="Sprite" parent="."]
position = Vector2( 697, 434 )
rotation = 3.14159
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )

[node name="Direita2" type="Sprite" parent="."]
position = Vector2( 783, 433 )
rotation = 3.14159
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )

[node name="Direita3" type="Sprite" parent="."]
position = Vector2( 697, 485 )
rotation = 3.14159
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )

[node name="Direita4" type="Sprite" parent="."]
position = Vector2( 782, 486 )
rotation = 3.14159
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )

[node name="Cima1" type="Sprite" parent="."]
position = Vector2( 617, 527 )
rotation = 1.5708
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )

[node name="Cima2" type="Sprite" parent="."]
position = Vector2( 706, 526 )
rotation = 1.5708
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )

[node name="Cima3" type="Sprite" parent="."]
position = Vector2( 617, 579 )
rotation = 1.5708
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )

[node name="Cima4" type="Sprite" parent="."]
position = Vector2( 704, 578 )
rotation = 1.5708
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )

[node name="Baixo1" type="Sprite" parent="."]
position = Vector2( 791, 515 )
rotation = -1.5708
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )

[node name="Baixo2" type="Sprite" parent="."]
position = Vector2( 879, 513 )
rotation = -1.5708
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )

[node name="Baixo3" type="Sprite" parent="."]
position = Vector2( 792, 565 )
rotation = -1.5708
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )

[node name="Baixo4" type="Sprite" parent="."]
position = Vector2( 879, 567 )
rotation = -1.5708
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )

[node name="pausar" parent="." instance=ExtResource( 20 )]

[connection signal="body_entered" from="coletavel1" to="." method="_on_coletavel1_body_entered"]
[connection signal="body_entered" from="coletavel2" to="." method="_on_coletavel2_body_entered"]
[connection signal="body_entered" from="coletavel3" to="." method="_on_coletavel3_body_entered"]
[connection signal="body_entered" from="coletavel4" to="." method="_on_coletavel4_body_entered"]
[connection signal="body_entered" from="coletavel5" to="." method="_on_coletavel4_body_entered"]
[connection signal="body_entered" from="coletavel5" to="." method="_on_coletavel5_body_entered"]
[connection signal="body_entered" from="coletavel6" to="." method="_on_coletavel4_body_entered"]
[connection signal="body_entered" from="coletavel6" to="." method="_on_coletavel6_body_entered"]
[connection signal="body_entered" from="saida" to="saida" method="_on_saida_body_entered"]
[connection signal="pressed" from="iniciar" to="garotodesafio1" method="_on_iniciar_pressed"]
[connection signal="pressed" from="esquerda" to="garotodesafio1" method="_on_esquerda_pressed"]
[connection signal="pressed" from="direita" to="garotodesafio1" method="_on_direita_pressed"]
[connection signal="pressed" from="baixo" to="garotodesafio1" method="_on_baixo_pressed"]
[connection signal="pressed" from="cima" to="garotodesafio1" method="_on_cima_pressed"]
[connection signal="body_entered" from="paredeinvisivel" to="garotodesafio1" method="_on_paredeinvisivel_body_entered"]
